[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
infinicore ={ path = "infini-core-rs" }
digit-layout = "0.3.0"
half = "2.3.1"
once_cell = "1.19.0"
clap = { version = "4.5.38", features = ["derive"] }
